Overview of changes from Beebop 1.0.0 to 1.0.1
==============================================

  * Correctly update controls as rows are added or removed.

  * Fill closing row with asterisks.

  * Save PDF files to a separate directory.


Overview of changes in Beebop 1.0.0
===================================

  * First release.